--- a/.github/workflows/main_wafrontnortheurope.yml
+++ b/.github/workflows/main_wafrontnortheurope.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Generate Prisma Client
+        run: npx prisma generate
+
       - name: Build the Next.js app
         run: npm run build
 
