--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.2",
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "6.2.1",
     "chart.js": "^4.4.8",
     "framer-motion": "^12.4.7",
     "hugeicons-react": "^0.3.0",
@@ -28,7 +28,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
-    "prisma": "^6.4.1",
+    "prisma": "6.2.1",
     "tailwindcss": "^3.4.17"
   }
 }
